Add profile photo

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -13,16 +13,17 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin: 0;
   margin-right: 20px;
   list-style: none;
+  padding-right: 15%;
 }
 
 .navbar p {
   color: #ffffff;
-  margin: 10px 20px;
+  margin: 10px 10px;
   font-size: 1.2em;
   font-weight: bold;
+  padding-left: 15%;
 }
 
 .navbar a {
@@ -45,9 +46,14 @@
   border-bottom: 3px solid #ffffff;
 }
 
+.content {
+  padding: 0 15%;
+  text-align: center;
+}
 
-
-
+.image {
+  margin: 20px 0;
+}
 
 /* Footer */
 footer {
@@ -62,10 +68,5 @@ footer {
   bottom: 0;
   text-align: center;
   font-weight: bold;
-  border-top: 1px solid #495057;
-}
-
-footer a {
-  text-decoration: none;
-
+  border-top: 1px solid #bdc2c7;
 }
